test/Errors/unknown_name.elab
Theorem bad_unknown : Prop := foo